{
  "version": 4,
  "terraform_version": "1.0.0",
  "serial": 94,
  "lineage": "195eb884-ea0a-acb7-9edb-01194a6292cd",
  "resources": [
    {
      "module": "module.App",
      "mode": "managed",
      "type": "aws_instance",
      "name": "App",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c2d06d50ce30b442",
            "arn": "arn:aws:ec2:us-west-2:753581062283:instance/i-0e584423caf403533",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e584423caf403533",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "xwiggy-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-030eb1920fd9e431e",
            "private_dns": "ip-10-0-2-111.us-west-2.compute.internal",
            "private_ip": "10.0.2.111",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-036adf2ba5a651397",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03e3dbba33511c831",
            "tags": {
              "Name": "xwiggy-App"
            },
            "tags_all": {
              "Name": "xwiggy-App"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e9d51b1973e1b2fa"
            ]
          },
          "dependencies": [
            "module.xwiggy-security-groups.aws_security_group.vpc-private-security-group",
            "module.xwiggy-vpc.aws_subnet.private_subnet-1",
            "module.xwiggy-vpc.aws_vpc.xwiggy_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.DB",
      "mode": "managed",
      "type": "aws_instance",
      "name": "DB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c2d06d50ce30b442",
            "arn": "arn:aws:ec2:us-west-2:753581062283:instance/i-05a055c59f6be1e07",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05a055c59f6be1e07",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "xwiggy-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-071fd99045b0a1512",
            "private_dns": "ip-10-0-2-222.us-west-2.compute.internal",
            "private_ip": "10.0.2.222",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0832eed62fb3b1f85",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03e3dbba33511c831",
            "tags": {
              "Name": "xwiggy-DB"
            },
            "tags_all": {
              "Name": "xwiggy-DB"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e9d51b1973e1b2fa"
            ]
          },
          "dependencies": [
            "module.xwiggy-security-groups.aws_security_group.vpc-private-security-group",
            "module.xwiggy-vpc.aws_subnet.private_subnet-1",
            "module.xwiggy-vpc.aws_vpc.xwiggy_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.web",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c2d06d50ce30b442",
            "arn": "arn:aws:ec2:us-west-2:753581062283:instance/i-09b1af55f5fd5e563",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09b1af55f5fd5e563",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "xwiggy-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07bb927dedeab2662",
            "private_dns": "ip-10-0-1-111.us-west-2.compute.internal",
            "private_ip": "10.0.1.111",
            "public_ip": "34.219.152.63",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b195171dfdcfed26",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e5bcca8791a9bdda",
            "tags": {
              "Name": "xwiggy-web"
            },
            "tags_all": {
              "Name": "xwiggy-web"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ce4b1306b4932401"
            ]
          },
          "dependencies": [
            "module.xwiggy-security-groups.aws_security_group.vpc-public-security-group",
            "module.xwiggy-vpc.aws_subnet.public_subnet-1",
            "module.xwiggy-vpc.aws_vpc.xwiggy_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.xwiggy-security-groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc-private-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:753581062283:security-group/sg-0e9d51b1973e1b2fa",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e9d51b1973e1b2fa",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "vpc-traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "xwiggy-private-security-group",
            "name_prefix": "",
            "owner_id": "753581062283",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "xwiggy-private"
            },
            "tags_all": {
              "Name": "xwiggy-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c4d686ec16d8ece4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.xwiggy-vpc.aws_vpc.xwiggy_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.xwiggy-security-groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc-public-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:753581062283:security-group/sg-0ce4b1306b4932401",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ce4b1306b4932401",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": null,
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "xwiggy-public-security-group",
            "name_prefix": "",
            "owner_id": "753581062283",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "xwiggy-public"
            },
            "tags_all": {
              "Name": "xwiggy-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c4d686ec16d8ece4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.xwiggy-vpc.aws_vpc.xwiggy_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.xwiggy-security-groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "public_inbound-rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow https traffic worldwide",
            "from_port": 80,
            "id": "sgrule-2561435460",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ce4b1306b4932401",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.xwiggy-security-groups.aws_security_group.vpc-public-security-group",
            "module.xwiggy-vpc.aws_vpc.xwiggy_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.xwiggy-security-groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "public_inbound-rules_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "157.32.168.5/32"
            ],
            "description": "Srinath",
            "from_port": 22,
            "id": "sgrule-1024392047",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ce4b1306b4932401",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.xwiggy-vpc.aws_vpc.xwiggy_vpc",
            "module.xwiggy-security-groups.aws_security_group.vpc-public-security-group"
          ]
        }
      ]
    },
    {
      "module": "module.xwiggy-vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:753581062283:route-table/rtb-0e6cf09643fcc28ba",
            "default_route_table_id": "rtb-0e6cf09643fcc28ba",
            "id": "rtb-0e6cf09643fcc28ba",
            "owner_id": "753581062283",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0367329c71051a385",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "xwiggy-public-route-table"
            },
            "tags_all": {
              "Name": "xwiggy-public-route-table"
            },
            "vpc_id": "vpc-0c4d686ec16d8ece4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.xwiggy-vpc.aws_internet_gateway.vpc_internet_gateway",
            "module.xwiggy-vpc.aws_vpc.xwiggy_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.xwiggy-vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-gateway-elastic-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0fa0e9b301271c34e",
            "domain": "vpc",
            "id": "eipalloc-044a12847a638622e",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0b4067fa2b71dc8cd",
            "private_dns": "ip-10-0-1-90.us-west-2.compute.internal",
            "private_ip": "10.0.1.90",
            "public_dns": "ec2-35-85-210-94.us-west-2.compute.amazonaws.com",
            "public_ip": "35.85.210.94",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "xwiggy-ngw-eip"
            },
            "tags_all": {
              "Name": "xwiggy-ngw-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.xwiggy-vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vpc_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:753581062283:internet-gateway/igw-0367329c71051a385",
            "id": "igw-0367329c71051a385",
            "owner_id": "753581062283",
            "tags": {
              "Name": "xwiggy-igw"
            },
            "tags_all": {
              "Name": "xwiggy-igw"
            },
            "vpc_id": "vpc-0c4d686ec16d8ece4"
          },
          "dependencies": [
            "module.xwiggy-vpc.aws_vpc.xwiggy_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.xwiggy-vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "vpc_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-044a12847a638622e",
            "connectivity_type": "public",
            "id": "nat-0461ddf98845a841f",
            "network_interface_id": "eni-0b4067fa2b71dc8cd",
            "private_ip": "10.0.1.90",
            "public_ip": "35.85.210.94",
            "subnet_id": "subnet-0e5bcca8791a9bdda",
            "tags": {
              "Name": "xwiggy-ngw"
            },
            "tags_all": {
              "Name": "xwiggy-ngw"
            }
          },
          "dependencies": [
            "module.xwiggy-vpc.aws_subnet.public_subnet-1",
            "module.xwiggy-vpc.aws_vpc.xwiggy_vpc",
            "module.xwiggy-vpc.aws_eip.nat-gateway-elastic-ip"
          ]
        }
      ]
    },
    {
      "module": "module.xwiggy-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:753581062283:route-table/rtb-0fe79e643ecdbfb63",
            "id": "rtb-0fe79e643ecdbfb63",
            "owner_id": "753581062283",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0461ddf98845a841f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "xwiggy-private-route-table"
            },
            "tags_all": {
              "Name": "xwiggy-private-route-table"
            },
            "vpc_id": "vpc-0c4d686ec16d8ece4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.xwiggy-vpc.aws_nat_gateway.vpc_nat_gateway",
            "module.xwiggy-vpc.aws_vpc.xwiggy_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.xwiggy-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-route-table-association-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07ddd4971848c5c9e",
            "route_table_id": "rtb-0fe79e643ecdbfb63",
            "subnet_id": "subnet-03e3dbba33511c831"
          },
          "dependencies": [
            "module.xwiggy-vpc.aws_eip.nat-gateway-elastic-ip",
            "module.xwiggy-vpc.aws_nat_gateway.vpc_nat_gateway",
            "module.xwiggy-vpc.aws_route_table.private-route-table",
            "module.xwiggy-vpc.aws_subnet.private_subnet-1",
            "module.xwiggy-vpc.aws_subnet.public_subnet-1",
            "module.xwiggy-vpc.aws_vpc.xwiggy_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.xwiggy-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-route-table-association-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00f31937097db4d6f",
            "route_table_id": "rtb-0e6cf09643fcc28ba",
            "subnet_id": "subnet-0e5bcca8791a9bdda"
          },
          "dependencies": [
            "module.xwiggy-vpc.aws_default_route_table.public-route-table",
            "module.xwiggy-vpc.aws_subnet.public_subnet-1"
          ]
        }
      ]
    },
    {
      "module": "module.xwiggy-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:753581062283:subnet/subnet-03e3dbba33511c831",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-03e3dbba33511c831",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "753581062283",
            "tags": {
              "Name": "xwiggy-private-subnet-1"
            },
            "tags_all": {
              "Name": "xwiggy-private-subnet-1"
            },
            "vpc_id": "vpc-0c4d686ec16d8ece4"
          },
          "dependencies": [
            "module.xwiggy-vpc.aws_vpc.xwiggy_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.xwiggy-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:753581062283:subnet/subnet-0e5bcca8791a9bdda",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0e5bcca8791a9bdda",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "753581062283",
            "tags": {
              "Name": "xwiggy-public-subnet-1"
            },
            "tags_all": {
              "Name": "xwiggy-public-subnet-1"
            },
            "vpc_id": "vpc-0c4d686ec16d8ece4"
          },
          "dependencies": [
            "module.xwiggy-vpc.aws_vpc.xwiggy_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.xwiggy-vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "xwiggy_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:753581062283:vpc/vpc-0c4d686ec16d8ece4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0268ebb01c448f30a",
            "default_route_table_id": "rtb-0e6cf09643fcc28ba",
            "default_security_group_id": "sg-07a6eca607cc4726c",
            "dhcp_options_id": "dopt-0cbde9eec8478a348",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0c4d686ec16d8ece4",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0e6cf09643fcc28ba",
            "owner_id": "753581062283",
            "tags": {
              "Name": "xwiggy-vpc"
            },
            "tags_all": {
              "Name": "xwiggy-vpc"
            }
          }
        }
      ]
    }
  ]
}